<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/ale"
        android:title="@string/ale"
        android:icon="@drawable/ic_phone"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/money"
        android:title="@string/money"
        android:icon="@drawable/ic_money"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/question"
        android:title="@string/question"
        android:icon="@drawable/ic_question"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/who"
        android:title="@string/person"
        android:icon="@drawable/ic_person"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/end"
        android:title="@string/end"
        android:icon="@drawable/ic_commit"
        app:showAsAction="ifRoom"
        />
</menu>